// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`composition and single continuous Memory bar fit 40 columns 1`] = `
"[33m⛁[39m[33m⛁[39m[33m⛁[39m[33m⛁[39m[33m⛁[39m[33m⛀[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m
[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m
[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m
[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m
[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m[33m⛶[39m
fake/test
SDK occupancy estimate ~25.1k / 500k
(5.0%)
[33m⛁[39m Occupied estimate ~25.1k (5.0%)
[33m⛶[39m Estimated remaining ~474.9k (95.0%)

Local rebuilt text ~25.1k / 500k (5.0%)
[31m⛁[39m System ~800 (0.2%)
[32m⛁[39m Skill catalog ~300 (<0.1%)
[33m⛁[39m Memory ~24k (4.8%)
SDK and local rebuilt text estimates
match numerically.

Memory ~24k
[31m████████████████████[39m[32m██████████[39m[33m██████████[39m[33m[39m
[31m⛁[39m Knowledge 12k  [32m⛁[39m Facts 6k  [33m⛁[39m Raw 6k

Pi rebuilt text estimate (not provider
wire)
SDK occupancy and remaining are
estimates; remaining is not guaranteed
free space.
"
`;

exports[`composition and single continuous Memory bar fit 80 columns 1`] = `
"[33m⛁[39m [33m⛁[39m [33m⛁[39m [33m⛁[39m [33m⛁[39m [33m⛀[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m   fake/test
[33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m   SDK occupancy estimate ~25.1k / 500k
[33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m   (5.0%)
[33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m   [33m⛁[39m Occupied estimate ~25.1k (5.0%)
[33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m   [33m⛶[39m Estimated remaining ~474.9k (95.0%)

Local rebuilt text ~25.1k / 500k (5.0%)
[31m⛁[39m System ~800 (0.2%)
[32m⛁[39m Skill catalog ~300 (<0.1%)
[33m⛁[39m Memory ~24k (4.8%)
SDK and local rebuilt text estimates match numerically.

Memory ~24k
[31m██████████████████████████████[39m[32m███████████████[39m[33m███████████████[39m[33m[39m
[31m⛁[39m Knowledge 12k  [32m⛁[39m Facts 6k  [33m⛁[39m Raw 6k

Pi rebuilt text estimate (not provider wire)
SDK occupancy and remaining are estimates; remaining is not guaranteed free
space.
"
`;

exports[`composition and single continuous Memory bar fit 100 columns 1`] = `
"[33m⛁[39m [33m⛁[39m [33m⛁[39m [33m⛁[39m [33m⛁[39m [33m⛀[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m   fake/test
[33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m   SDK occupancy estimate ~25.1k / 500k (5.0%)
[33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m   [33m⛁[39m Occupied estimate ~25.1k (5.0%)
[33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m   [33m⛶[39m Estimated remaining ~474.9k (95.0%)
[33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m [33m⛶[39m

Local rebuilt text ~25.1k / 500k (5.0%)
[31m⛁[39m System ~800 (0.2%)
[32m⛁[39m Skill catalog ~300 (<0.1%)
[33m⛁[39m Memory ~24k (4.8%)
SDK and local rebuilt text estimates match numerically.

Memory ~24k
[31m██████████████████████████████[39m[32m███████████████[39m[33m███████████████[39m[33m[39m
[31m⛁[39m Knowledge 12k  [32m⛁[39m Facts 6k  [33m⛁[39m Raw 6k

Pi rebuilt text estimate (not provider wire)
SDK occupancy and remaining are estimates; remaining is not guaranteed free space.
"
`;
